Update group creation api
